Add a couple of little helpful messages

--- a/packages/website/src/layouts/resume.astro
+++ b/packages/website/src/layouts/resume.astro
@@ -77,6 +77,7 @@ const hasContent = Astro.slots.has('default')
 
     <div class="cntnr">
       <h2 class="hhr text-peach">Roles</h2>
+      <p>Click on an org (or epic) name to know more.</p>
     </div>
     <div class="mb-4 w-full max-w-screen-lg">
       <div class="hidden sm:block">
@@ -92,6 +93,7 @@ const hasContent = Astro.slots.has('default')
 
     <div class="cntnr">
       <h2 class="hhr text-peach">Projects</h2>
+      <p>Click on an epic (or org) name to know more.</p>
     </div>
     <div class="mb-4 w-full max-w-screen-lg">
       <div class="hidden sm:block">
