--- a/packages/website/src/pages/resume/pdf.astro
+++ b/packages/website/src/pages/resume/pdf.astro
@@ -39,7 +39,7 @@ const pageTitle = getPageTitle('Résumé PDF')
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400..800;1,400..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Spectral:ital,wght@0,400..800;1,400..800&display=swap"
     />
   </slot>
 
