Use `Link` component over `a` tag

--- a/packages/website/src/pages/resume/pdf.astro
+++ b/packages/website/src/pages/resume/pdf.astro
@@ -59,7 +59,7 @@ const pageTitle = getPageTitle('Résumé PDF')
       <!-- Top segment -->
       <header class="mb-[5mm] text-center">
         <h1 class="font-serif text-xl font-bold">
-          <a href={site.baseUrl}>Dhruv Bhanushali</a>
+          <Link url={site.baseUrl}>Dhruv Bhanushali</Link>
         </h1>
         {
           recivi.bio.summary && (
