Clarify that IndieAuth is automatically supported by the contact list

--- a/packages/website/src/components/ContactList.astro
+++ b/packages/website/src/components/ContactList.astro
@@ -1,4 +1,13 @@
 ---
+/**
+ * list all the ways of contacting me
+ *
+ * All contact links have rel="me" which makes it possible to use them for the
+ * purpose of IndieAuth authentication. So if you set up links to your profiles,
+ * any website that IndieAuth supports can be used as your identity verification
+ * platform.
+ */
+
 import Icon from '@/components/Icon.astro'
 import Link from '@/components/Link.astro'
 
