--- a/src/components/Date.astro
+++ b/src/components/Date.astro
@@ -1,5 +1,5 @@
 ---
-import type { Date as RcvDate } from 'recivi'
+import type { Date as RcvDate } from '@recivi/schema'
 
 import { getRcvDate, dateReadable, dateDisplay } from '@/utils/date_fmt'
 
