--- a/src/components/IconName.astro
+++ b/src/components/IconName.astro
@@ -1,11 +1,11 @@
 ---
-import type { Url } from 'recivi'
+import type { Url } from '@recivi/schema'
 
 import Icon from '@/components/Icon.astro'
 import Link from '@/components/Link.astro'
 
 interface Props {
-  id: string
+  id?: string | undefined
   name: string
   /**
    * If you don't wish the component to be a link, don't pass the `url` prop or
@@ -13,13 +13,17 @@ interface Props {
    */
   url?: Url | undefined
 }
-let { id, name, url = undefined, ...attrs } = Astro.props
+let { id = undefined, name, url = undefined, ...attrs } = Astro.props
 ---
 
 <span class="inline-block">
-  <Icon
-    name={id}
-    {...attrs}
-  />
+  {
+    id && (
+      <Icon
+        name={id}
+        {...attrs}
+      />
+    )
+  }
   {url ? <Link {url}>{name}</Link> : <span>{name}</span>}
 </span>
