--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,5 +1,5 @@
 ---
-import type { Url } from 'recivi'
+import type { Url } from '@recivi/schema'
 import type { HTMLAttributes } from 'astro/types'
 
 import { urlToDest } from '@/utils/recivi'
