--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -1,5 +1,5 @@
 ---
-import type { Skill } from 'recivi'
+import type { Skill } from '@recivi/schema'
 
 import IconName from '@/components/IconName.astro'
 
