--- a/src/pages/resume/epics/[id].astro
+++ b/src/pages/resume/epics/[id].astro
@@ -1,5 +1,5 @@
 ---
-import type { Tech } from 'recivi'
+import type { Tech } from '@recivi/schema'
 
 import ResumeLayout from '@/layouts/resume.astro'
 
