Replace `text-subtle` with `text-overlay1`

--- a/src/components/ContactList.astro
+++ b/src/components/ContactList.astro
@@ -42,7 +42,7 @@ const items = [
     items.map((item) => (
       <li>
         <div class="flex items-center gap-2">
-          <span class="text-peach pdf:text-subtle">
+          <span class="text-peach pdf:text-overlay1">
             {item.icon.name && (
               <Icon
                 source={item.icon.source}
