--- a/src/components/InstituteCard.astro
+++ b/src/components/InstituteCard.astro
@@ -23,7 +23,7 @@ const { institute } = Astro.props
         <li>
           <div class="flex justify-between gap-3">
             {certDisplay(cert)}
-            <span class="text-subtle">
+            <span class="text-overlay1">
               <DateComponent date={cert.issue} />
             </span>
           </div>
