--- a/src/components/OrgCard.astro
+++ b/src/components/OrgCard.astro
@@ -28,7 +28,7 @@ const { org } = Astro.props
         <li>
           <div class="flex justify-between gap-3">
             {role.name}
-            <span class="text-subtle">
+            <span class="text-overlay1">
               <TimePeriod {...role.period} />
             </span>
           </div>
