--- a/src/components/EpicCard.astro
+++ b/src/components/EpicCard.astro
@@ -26,7 +26,7 @@ const { epic } = Astro.props
           <div class="flex">
             {project.name}
             {/* prettier-ignore */}
-            <ul class="ml-auto text-subtle">
+            <ul class="ml-auto text-overlay1">
               {project.technologies?.map((technology) => (
                 technology.id && <li class="inline after:mx-1 after:content-['·'] last:after:content-none"><Icon name={technology.id} /></li>
               ))}
