--- a/src/pages/writings/posts/[slug].astro
+++ b/src/pages/writings/posts/[slug].astro
@@ -59,21 +59,21 @@ const metadata = {
     <h1 class="text-3xl text-peach sm:text-5xl">{post.data.title}</h1>
 
     <dl class="mb-2 grid grid-cols-[auto,_1fr] gap-x-2">
-      <dt class="text-subtle">Tags:</dt>
+      <dt class="text-overlay1">Tags:</dt>
       <dd>
         <ul class="inline">
           {
             post.data.categories.map((category: string) => (
-              <li class="inline-block after:mr-1 after:text-subtle after:content-['·'] last:after:content-none">
+              <li class="inline-block after:mr-1 after:text-overlay1 after:content-['·'] last:after:content-none">
                 {category}
               </li>
             ))
           }
         </ul>
       </dd>
-      <dt class="text-subtle">First published:</dt>
+      <dt class="text-overlay1">First published:</dt>
       <dd><DateComponent date={post.data.pubDate} /></dd>
-      <dt class="text-subtle">Last updated:</dt>
+      <dt class="text-overlay1">Last updated:</dt>
       <dd><DateComponent date={modDate} /></dd>
     </dl>
 
