Fix incorrectly ordered utils

--- a/src/components/EpicEntry.astro
+++ b/src/components/EpicEntry.astro
@@ -44,7 +44,7 @@ const { epic } = Astro.props
   {
     epic.summary && (
       <p
-        class="mb-4 mt-1"
+        class="mt-1 mb-4"
         set:html={epic.summary}
       />
     )
