--- a/src/components/OrgEntry.astro
+++ b/src/components/OrgEntry.astro
@@ -41,7 +41,7 @@ const { org } = Astro.props
   {
     org.summary && (
       <p
-        class="mb-4 mt-1"
+        class="mt-1 mb-4"
         set:html={org.summary}
       />
     )
