--- a/src/components/OrgEntry.astro
+++ b/src/components/OrgEntry.astro
@@ -12,7 +12,8 @@ interface Props {
 const { org } = Astro.props
 ---
 
-<li class="mb-3 border-b pb-3 last:mb-0 last:border-none last:pb-0">
+<li
+  class="mb-3 border-b border-surface1 pb-3 last:mb-0 last:border-none last:pb-0">
   <div class="flex items-center justify-between">
     <h3 class="font-medium">
       <IconName
