--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -40,7 +40,7 @@ function getIsExactMatch(url: string): boolean {
 ---
 
 <header
-  class="cntnr flex flex-col justify-between gap-2 border-b py-4 sm:flex-row"
+  class="cntnr flex flex-col justify-between gap-2 border-b border-surface1 py-4 sm:flex-row"
   class:list={classes}>
   <Link url="/">
     <!-- Class `inline-block` prevents underline from `Link`. -->
