--- a/src/components/OrgCard.astro
+++ b/src/components/OrgCard.astro
@@ -11,7 +11,7 @@ interface Props {
 const { org } = Astro.props
 ---
 
-<div class="border-b px-4 py-2">
+<div class="border-b border-surface1 px-4 py-2">
   <div class="flex justify-between">
     <strong
       ><IconName
