--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -13,7 +13,7 @@ const { classes = [] } = Astro.props
 ---
 
 <footer
-  class="cntnr flex items-center justify-between border-t py-4 text-overlay1"
+  class="cntnr flex items-center justify-between border-t border-surface1 py-4 text-overlay1"
   class:list={classes}>
   <div class="italic">
     <Icon
