--- a/src/layouts/writings.astro
+++ b/src/layouts/writings.astro
@@ -73,7 +73,7 @@ const categories = await getCategories()
               {categories.map((category) => (
                 <label
                   x-data={`{ category: '${category}' }`}
-                  x-bind:class="{'border-peach': activeCategories.includes(category) }"
+                  x-bind:class="activeCategories.includes(category) ? 'border-peach' : 'border-surface1'"
                   class="my-1 mr-1 inline-block rounded border px-1 py-0.5 hover:bg-surface0">
                   <input
                     class="hidden"
