Set explicit rounding radius

--- a/src/layouts/writings.astro
+++ b/src/layouts/writings.astro
@@ -74,7 +74,7 @@ const categories = await getCategories()
                 <label
                   x-data={`{ category: '${category}' }`}
                   x-bind:class="activeCategories.includes(category) ? 'border-peach' : 'border-surface1'"
-                  class="my-1 mr-1 inline-block rounded border px-1 py-0.5 hover:bg-surface0">
+                  class="my-1 mr-1 inline-block rounded-sm border px-1 py-0.5 hover:bg-surface0">
                   <input
                     class="hidden"
                     type="checkbox"
