--- a/src/components/TocNode.astro
+++ b/src/components/TocNode.astro
@@ -12,7 +12,7 @@ const { heading } = Astro.props
 {
   heading.children.length ? (
     <details>
-      <summary class="cursor-pointer rounded hover:bg-surface0">
+      <summary class="cursor-pointer rounded-sm hover:bg-surface0">
         <span
           class="px-1 py-0.5"
           class:list={{ 'text-overlay1': heading.depth === 0 }}>
