Replace `flex-grow` with `grow`

--- a/src/layouts/resume.astro
+++ b/src/layouts/resume.astro
@@ -55,7 +55,7 @@ const hasContent = Astro.slots.has('default')
   </slot>
 
   <!-- content for the left pane -->
-  <main class="my-4 flex-grow">
+  <main class="my-4 grow">
     <div class="cntnr">
       <ResumeIndex />
     </div>
