--- a/src/layouts/writings.astro
+++ b/src/layouts/writings.astro
@@ -50,7 +50,7 @@ const categories = await getCategories()
   </slot>
 
   <!-- content for the left pane -->
-  <main class="my-4 flex-grow">
+  <main class="my-4 grow">
     <div class="cntnr">
       <WritingsIndex />
     </div>
