--- a/src/pages/writings/posts/[slug].astro
+++ b/src/pages/writings/posts/[slug].astro
@@ -58,7 +58,7 @@ const metadata = {
   <div class="cntnr my-4">
     <h1 class="text-3xl text-peach sm:text-5xl">{post.data.title}</h1>
 
-    <dl class="mb-2 grid grid-cols-[auto,_1fr] gap-x-2">
+    <dl class="mb-2 grid grid-cols-[auto_1fr] gap-x-2">
       <dt class="text-overlay1">Tags:</dt>
       <dd>
         <ul class="inline">
