--- a/src/pages/resume/epics/[id].astro
+++ b/src/pages/resume/epics/[id].astro
@@ -72,7 +72,7 @@ const metadata = {
         <div>
           <h2 class="hhr text-peach">{project.name}</h2>
 
-          <dl class="mb-2 grid grid-cols-[auto,_1fr] gap-x-2 [&:not(:has(dt))]:hidden">
+          <dl class="mb-2 grid grid-cols-[auto_1fr] gap-x-2 [&:not(:has(dt))]:hidden">
             {project.url && (
               <Fragment>
                 <dt class="text-overlay1">URL:</dt>
