Remove unnecessary border

--- a/src/components/Table.astro
+++ b/src/components/Table.astro
@@ -35,7 +35,7 @@ function isCurr(row: Row) {
   border="1px"
   class="cntnr px-0 transition"
   x-data="{ activeGroup: undefined }">
-  <thead class="border-y bg-surface0">
+  <thead class="bg-surface0">
     <tr>
       {
         columns.map((column: ColumnSpec) => (
