--- a/src/pages/writings/posts/[slug].astro
+++ b/src/pages/writings/posts/[slug].astro
@@ -81,7 +81,7 @@ const metadata = {
 
     <hr class="-mx-4 my-4 border-surface1" />
 
-    <article>
+    <article class="md-post">
       <Content />
     </article>
 
