--- a/src/components/Breakpoint.astro
+++ b/src/components/Breakpoint.astro
@@ -7,11 +7,8 @@ const isDev = import.meta.env.DEV
     <span class="text-blue">
       Breakpoint:
       <span class="sm:hidden">mobile</span>
-      <span class="hidden sm:inline md:hidden">sm</span>
-      <span class="hidden md:inline lg:hidden">md</span>
-      <span class="hidden lg:inline xl:hidden">lg</span>
-      <span class="hidden xl:inline 2xl:hidden">xl</span>
-      <span class="hidden 2xl:inline">2xl</span>
+      <span class="hidden sm:inline xl:hidden">sm</span>
+      <span class="hidden xl:inline">xl</span>
       <span id="width" />
     </span>
   )
