--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -17,7 +17,7 @@ const body = getBody(name, source)
   body ? (
     <svg
       viewBox="0 0 24 24"
-      class="inline size-curr align-[-0.1em]"
+      class="inline size-[1em] align-[-0.1em]"
       height="1rem"
       width="1rem">
       {title && <title>{title}</title>}
