Replace custom color `-curr` with built-in value `-current`

--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -67,8 +67,8 @@ function getIsExactMatch(url: string): boolean {
                         'no-underline',
                         'hover:underline',
                         'hover:decoration-wavy',
-                        'decoration-curr',
-                        'visited:decoration-curr',
+                        'decoration-current',
+                        'visited:decoration-current',
                       ],
                 ]}>
                 {link.text}
