--- a/src/layouts/root.astro
+++ b/src/layouts/root.astro
@@ -23,7 +23,7 @@ const { rootClasses = [], bodyClasses = [] } = Astro.props
 
 <html
   lang="en"
-  class="h-full bg-default text-default"
+  class="h-full bg-base text-text"
   class:list={rootClasses}>
   <head>
     <meta charset="utf-8" />
